<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".StudentTimetable">

    <LinearLayout
        android:id="@+id/students_main_layout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:flow_verticalGap="10dp"
        app:layout_constraintHeight="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth="match_parent">

        <TextView
            style="@style/PrimaryContainerLabel"
            android:id="@+id/ep_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_select_ep" />

        <Spinner
            android:id="@+id/select_ep_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/PrimaryContainerLabel"
            android:id="@+id/course_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_select_course" />

        <Spinner
            android:id="@+id/select_course_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/PrimaryContainerLabel"
            android:id="@+id/group_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_select_group" />

        <Spinner
            android:id="@+id/select_group_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/current_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/PrimaryContainerLabel"
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/PrimaryContainerLabel"
                android:id="@+id/para_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:id="@+id/para_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/para_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/para_cabinet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/para_corpus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/para_prepod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/teacher_day_timetable" />

            <Button
                android:id="@+id/teacher_week_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/teacher_week_timetable" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>