<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Settings">
        <LinearLayout
            android:id="@id/setttings_main_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp">

                <ImageView
                    android:id="@+id/settings_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:adjustViewBounds="true"
                     />
                <Button
                    android:id="@+id/change_avatar_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_change_avatar_button"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/settings_name_input"
                    android:layout_weight="0.5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/settings_name_hint" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/settings_lightning_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    />
                <TextView
                    android:id="@+id/settings_sensor_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:scrollbars="vertical"
                    android:maxLines="10"
                    />
            </LinearLayout>
        </LinearLayout>

    <Button
        android:id="@+id/settings_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/settings_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setttings_main_block" />

</androidx.constraintlayout.widget.ConstraintLayout>